example/ingress_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "myproxy" # 注意这里需要特定的annotation，才会被controller接收到，进行对应的业务逻辑。
spec:
  rules:
    - host: test.jtthink.com11
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
